IT WORKSgit status Kinda

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,11 @@
 .settings/*
 .project
 .cproject
-Debug/
-Debug/*
+.externalToolBuilders/
+.externalToolBuilders/*
+
+#build 
+src/bld
+src/bld/*
+
+
