--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -31,6 +31,7 @@ target_link_options(${PROJECT_NAME} PRIVATE
 target_link_libraries(${PROJECT_NAME} PUBLIC 
   SystemConfig
   Gpio
+  Exti
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC
