Fixed for new refactor

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.16)
 
+set(DEVICE STM32F429)
+
 set(ASSEMBLY_SCRIPT startup_stm32f429xx.s)
 set(LINKER_FILE stm32f429zi_flash.ld)
 
@@ -9,7 +11,7 @@ set(CMAKE_TOOLCHAIN_FILE ${STM32_COMMON_LIBRARY_DIR}/cmake/toolchain-arm-none-ea
 project(VehicleManagementSystem C CXX ASM)
 set(SOURCES
  main.cpp
- ${STM32_COMMON_LIBRARY_DIR}/startup/${ASSEMBLY_SCRIPT}
+ ${STM32_COMMON_LIBRARY_DIR}/build/startup/${ASSEMBLY_SCRIPT}
 )
 
 add_subdirectory(${STM32_COMMON_LIBRARY_DIR} ${STM32_COMMON_LIBRARY_DIR}/bld)
@@ -25,7 +27,7 @@ target_link_options(${PROJECT_NAME} PRIVATE
   --specs=nosys.specs
   -nostdlib
   -lgcc
-  -T${STM32_COMMON_LIBRARY_DIR}/ld/${LINKER_FILE}
+  -T${STM32_COMMON_LIBRARY_DIR}/build/ld/${LINKER_FILE}
 )
 
 target_link_libraries(${PROJECT_NAME} PUBLIC 
